# metasub_utils

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.rst  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
metasub_utils/: __init__.py  assemblies.py  cli.py  constants.py  hudson_alpha.py  metagenscope.py  sftp_server.py  utils.py  wasabi_bucket.py
metasub_utils/athena/: requirements.txt  setup.py
metasub_utils/athena/metasub_utils/athena/: cli.py  constants.py
metasub_utils/bridges/: requirements.txt  setup.py
metasub_utils/bridges/metasub_utils/bridges/: bridges.py  cli.py  constants.py  datasuper_to_hauniq.tsv  utils.py
metasub_utils/cli/metasub_utils/cli/: cli.py
metasub_utils/data_packet/: requirements.txt  setup.py
metasub_utils/hudson_alpha/: requirements.txt  setup.py
metasub_utils/metadata/: setup.py
metasub_utils/metadata/tests/: test_metadata.py
metasub_utils/metagenscope/: requirements.txt  setup.py
metasub_utils/packet_parse/: setup.py
metasub_utils/packet_parse/tests/: test_fig2.py  test_fig_data.py  test_figures.py  test_metasub_factory.py  test_tables.py
metasub_utils/pangea/: setup.py  testit.py
metasub_utils/wasabi/: requirements.txt  setup.py
metasub_utils/wasabi/tests/: test_wasabi.py
metasub_utils/zurich/: setup.py
scripts/: careful_copy.py  data_packet_helper.py
tables/: hudson_alpha_flowcells.csv
tests/: __init__.py  test_metasub_utils.py
(+35 files in other folders)
