[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:metasub_utils/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here

[metadata]
requires-dist =
  six
  future
  metasub_utils.athena
  metasub_utils.bridges
  metasub_utils.hudson_alpha
  metasub_utils.metadata
  metasub_utils.metagenscope
  metasub_utils.wasabi
  metasub_utils.zurich